--- a/src/templates/settings.twig
+++ b/src/templates/settings.twig
@@ -83,7 +83,7 @@
     }) }}
 
     {{ forms.selectField({
-        label: "Product id"|t('google-shopping-feed'),
+        label: "Product price"|t('google-shopping-feed'),
         id: "price",
         name: "price",
         required: true,
