--- a/src/templates/settings.twig
+++ b/src/templates/settings.twig
@@ -97,10 +97,26 @@
         id: "brand",
         name: "brand",
         required: true,
-        options: availableFields,
+        options: availableFields|merge({'custom': 'Custom value'}),
         value: settings['brand'],
         errors: settings.errors and settings.errors['brand'] is defined ? settings.errors['brand']
     }) }}
+    {% if settings.brand == 'custom' %}
+        <div class="field" id="settings-brandCustom-field">
+            <div class="heading">
+                <label id="settings-brandCustom-label" for="settings-brandCustom">{{ "Custom brand value" }}</label>
+            </div>
+            <div class="input ltr">
+                <input class="text fullwidth" type="text" id="settings-brandCustom" name="brandCustom" value="{{ settings.brandCustom ?: ''}}" autocomplete="off">
+            </div>
+        </div>
+    {% endif %}
+    {% js at POS_END %}
+        $('#settings-brand').change(function() {
+           $this = $(this);
+           console.log($this.val());
+        });
+    {% endjs %}
 
     {{ forms.selectField({
         label: "Product description"|t('google-shopping-feed'),
@@ -142,5 +158,5 @@
         }) }}
     {% endif %}
 {% else %}
-    <h2>{{ 'Craft Commerce not installed'|t }}</h2>
+    <p>{{ 'Craft Commerce not installed'|t }}</p>
 {% endif %}
